fix: ensure backend host permission

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,15 @@
   "permissions": [
     "storage",
     "sidePanel",
-    "activeTab"
+    "activeTab",
+    "permissions"
+  ],
+  "host_permissions": [
+    "http://localhost/*",
+    "http://127.0.0.1/*"
+  ],
+  "optional_host_permissions": [
+    "<all_urls>"
   ],
   "action": {
     "default_title": "Open SideMind"
